--- a/machine_learning/supervised/logistic_regression/logistic_regression.ipynb
+++ b/machine_learning/supervised/logistic_regression/logistic_regression.ipynb
@@ -512,6 +512,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44529bb4-e16e-4bbd-b621-468ae6da03e8",
+   "metadata": {},
+   "source": [
+    "## Columns:\n",
+    "        **precision**:\n",
+    "            Measures the proportion of correct positive predictions for a class.\n",
+    "            Computation:\n",
+    "                true_positives / (true_positives + false_positives)\n",
+    "            Interpretation:\n",
+    "                Among all samples predicted as belonging to the class, precision\n",
+    "                indicates how many were truly from that class.\n",
+    "\n",
+    "        **recall**:\n",
+    "            Measures the proportion of actual positives that were correctly identified.\n",
+    "            Computation:\n",
+    "                true_positives / (true_positives + false_negatives)\n",
+    "            Interpretation:\n",
+    "                Among all samples that truly belong to the class, recall shows\n",
+    "                how many the model correctly detected.\n",
+    "\n",
+    "        **f1-score**:\n",
+    "            The harmonic mean of precision and recall, providing a balanced metric\n",
+    "            that accounts for both false positives and false negatives.\n",
+    "            Computation:\n",
+    "                2 * (precision * recall) / (precision + recall)\n",
+    "            Interpretation:\n",
+    "                A single score that summarizes model performance on the class.\n",
+    "\n",
+    "        **support**:\n",
+    "            The number of true instances of each class in the test dataset.\n",
+    "            Interpretation:\n",
+    "                Indicates how many samples of that class were evaluated.\n",
+    "\n",
+    "    Global metrics:\n",
+    "        **accuracy**:\n",
+    "            The proportion of all predictions that were correct across all classes.\n",
+    "\n",
+    "        **macro avg**:\n",
+    "            The unweighted average of precision, recall, and f1-score across all classes.\n",
+    "            Each class contributes equally, regardless of how many samples it has.\n",
+    "\n",
+    "        **weighted avg**:\n",
+    "            The average of precision, recall, and f1-score weighted by support.\n",
+    "            Classes with more samples have more influence on the final result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "ccca4d40",
