--- a/machine_learning/supervised/linear_regression/linear_regression.ipynb
+++ b/machine_learning/supervised/linear_regression/linear_regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "id": "0e2eeeb2",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 96,
    "id": "e476a2a3",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 97,
    "id": "f3596287",
    "metadata": {},
    "outputs": [
@@ -100,75 +100,65 @@
        "      <td>36.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>6.430</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>28.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>6.593</td>\n",
-       "      <td>2.4786</td>\n",
-       "      <td>22.4</td>\n",
+       "      <th>6</th>\n",
+       "      <td>6.012</td>\n",
+       "      <td>5.5605</td>\n",
+       "      <td>22.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>6.120</td>\n",
-       "      <td>2.2875</td>\n",
-       "      <td>20.6</td>\n",
+       "      <th>7</th>\n",
+       "      <td>6.172</td>\n",
+       "      <td>5.9505</td>\n",
+       "      <td>27.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>6.976</td>\n",
-       "      <td>2.1675</td>\n",
-       "      <td>23.9</td>\n",
+       "      <th>8</th>\n",
+       "      <td>5.631</td>\n",
+       "      <td>6.0821</td>\n",
+       "      <td>16.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>504</th>\n",
-       "      <td>6.794</td>\n",
-       "      <td>2.3889</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>505</th>\n",
-       "      <td>6.030</td>\n",
-       "      <td>2.5050</td>\n",
-       "      <td>11.9</td>\n",
+       "      <th>9</th>\n",
+       "      <td>6.004</td>\n",
+       "      <td>6.5921</td>\n",
+       "      <td>18.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>506 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Rooms  Distance  Value\n",
-       "0    6.575    4.0900   24.0\n",
-       "1    6.421    4.9671   21.6\n",
-       "2    7.185    4.9671   34.7\n",
-       "3    6.998    6.0622   33.4\n",
-       "4    7.147    6.0622   36.2\n",
-       "..     ...       ...    ...\n",
-       "501  6.593    2.4786   22.4\n",
-       "502  6.120    2.2875   20.6\n",
-       "503  6.976    2.1675   23.9\n",
-       "504  6.794    2.3889   22.0\n",
-       "505  6.030    2.5050   11.9\n",
-       "\n",
-       "[506 rows x 3 columns]"
+       "   Rooms  Distance  Value\n",
+       "0  6.575    4.0900   24.0\n",
+       "1  6.421    4.9671   21.6\n",
+       "2  7.185    4.9671   34.7\n",
+       "3  6.998    6.0622   33.4\n",
+       "4  7.147    6.0622   36.2\n",
+       "5  6.430    6.0622   28.7\n",
+       "6  6.012    5.5605   22.9\n",
+       "7  6.172    5.9505   27.1\n",
+       "8  5.631    6.0821   16.5\n",
+       "9  6.004    6.5921   18.9"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_boston"
+    "df_boston.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 98,
    "id": "ee400635",
    "metadata": {},
    "outputs": [
@@ -263,7 +253,7 @@
        "max      8.780000   12.126500   50.000000"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "id": "210007b0",
    "metadata": {},
    "outputs": [],
@@ -339,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "id": "75445f5d",
    "metadata": {},
    "outputs": [
@@ -395,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "id": "f5652341-a30c-4523-8955-c73b76b4941f",
    "metadata": {},
    "outputs": [
@@ -405,7 +395,7 @@
        "<Axes: xlabel='Rooms', ylabel='Value'>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -458,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "id": "0a60ceb9-afff-4ed7-a5d6-c2f5af356160",
    "metadata": {},
    "outputs": [],
@@ -468,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 103,
    "id": "07334063-3265-400b-8a2b-46266bb0bddd",
    "metadata": {},
    "outputs": [
@@ -502,11 +492,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "33df23cc-a4a3-4c80-8788-e3e579abcdfb",
    "metadata": {},
-   "outputs": [],
    "source": [
     "The function sm.add_constant(x) adds a column of 1s to the feature matrix x.\n",
     "\n",
@@ -530,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 105,
    "id": "d28db06d-f6b8-49d6-961c-66d7240d8e3a",
    "metadata": {},
    "outputs": [],
@@ -567,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "id": "7eaa2ff7-e2d4-4f8a-ba6a-79abc9967646",
    "metadata": {},
    "outputs": [
@@ -575,7 +563,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lm.predict(x) = 0      25.175746\n",
+      "lm.predict(x) = \n",
+      " 0      25.175746\n",
       "1      23.774021\n",
       "2      30.728032\n",
       "3      29.025938\n",
@@ -588,7 +577,8 @@
       "505    20.215096\n",
       "Length: 506, dtype: float64\n",
       "\n",
-      "df_boston['Value'] = 0      24.0\n",
+      "df_boston['Value'] = \n",
+      " 0      24.0\n",
       "1      21.6\n",
       "2      34.7\n",
       "3      33.4\n",
@@ -605,8 +595,8 @@
     }
    ],
    "source": [
-    "print(f\"lm.predict(x) = {lm.predict(x)}\\n\")  # Predicting the model\n",
-    "print(f\"df_boston['Value'] = {df_boston['Value']}\\n\") # Actual values from the df"
+    "print(f\"lm.predict(x) = \\n {lm.predict(x)}\\n\")  # Predicting the model\n",
+    "print(f\"df_boston['Value'] = \\n {df_boston['Value']}\\n\") # Actual values from the df"
    ]
   },
   {
@@ -642,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "id": "bd7dd358-6fd0-418e-99a4-4d2df22914ae",
    "metadata": {},
    "outputs": [
@@ -664,7 +654,7 @@
        "  <th>Date:</th>             <td>Mon, 01 Dec 2025</td> <th>  Prob (F-statistic):</th> <td>2.49e-74</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>07:06:25</td>     <th>  Log-Likelihood:    </th> <td> -1673.1</td>\n",
+       "  <th>Time:</th>                 <td>16:13:47</td>     <th>  Log-Likelihood:    </th> <td> -1673.1</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   506</td>      <th>  AIC:               </th> <td>   3350.</td>\n",
@@ -713,7 +703,7 @@
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.483   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     471.8   \\\\\n",
        "\\textbf{Date:}             & Mon, 01 Dec 2025 & \\textbf{  Prob (F-statistic):} &  2.49e-74   \\\\\n",
-       "\\textbf{Time:}             &     07:06:25     & \\textbf{  Log-Likelihood:    } &   -1673.1   \\\\\n",
+       "\\textbf{Time:}             &     16:13:47     & \\textbf{  Log-Likelihood:    } &   -1673.1   \\\\\n",
        "\\textbf{No. Observations:} &         506      & \\textbf{  AIC:               } &     3350.   \\\\\n",
        "\\textbf{Df Residuals:}     &         504      & \\textbf{  BIC:               } &     3359.   \\\\\n",
        "\\textbf{Df Model:}         &           1      & \\textbf{                     } &             \\\\\n",
@@ -749,7 +739,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.483\n",
        "Method:                 Least Squares   F-statistic:                     471.8\n",
        "Date:                Mon, 01 Dec 2025   Prob (F-statistic):           2.49e-74\n",
-       "Time:                        07:06:25   Log-Likelihood:                -1673.1\n",
+       "Time:                        16:13:47   Log-Likelihood:                -1673.1\n",
        "No. Observations:                 506   AIC:                             3350.\n",
        "Df Residuals:                     504   BIC:                             3359.\n",
        "Df Model:                           1                                         \n",
@@ -771,7 +761,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 76,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
